:memo: Image 추가
이미지 추가

--- a/_posts/2020-12-20-cra 오류 해결.md
+++ b/_posts/2020-12-20-cra 오류 해결.md
@@ -22,7 +22,7 @@ rating: 3
 
 ## Type과 Interface의 차이?
 
-[https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fbie6TC%2FbtqBs0qjptI%2F4n7Tn33ocqZO1RKS0S0KVK%2Fimg.png](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fbie6TC%2FbtqBs0qjptI%2F4n7Tn33ocqZO1RKS0S0KVK%2Fimg.png)
+![difference between Type and Interface](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fbie6TC%2FbtqBs0qjptI%2F4n7Tn33ocqZO1RKS0S0KVK%2Fimg.png)
 
 백오피스를 진행하면서 Typescript를 처음 사용해봤다.
 
