--- a/_posts/2020-12-24-프로그래머스 문제 풀이 및 RN.md
+++ b/_posts/2020-12-24-프로그래머스 문제 풀이 및 RN.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2020-12-24 24:00:00
-title: '익명 함수와 선언적 함수의 차이 '
+title: '프로그래머스 문제 풀이 및 RN '
 author: 김동훈
 categories: [TIL]
 tags: [github]
@@ -45,9 +45,11 @@ const styles = StyleSheet.create({
 - View는 꼭 필요한 요소일까?
 - 아주아주아주아주 기초적인것부터 시작했다. 사실 그동안 사용했던 리액트와 많이 비슷하기 때문에 바로 코드를 찍을 수는 있을 것 같다. 
 - 모바일 환경에 적응되는게 다를테니 시행 착오는 있겠지만.. 그 부분도 열심히 따라가야겠다.
-- 카카오 로그인을 구현해야 하기 때문에, 따라해볼만한 레퍼런스를 찾았다.
-    https://webruden.tistory.com/272
+- 카카오 로그인을 구현해야 하기 때문에, 따라해볼만한 레퍼런스를 찾았다.https://webruden.tistory.com/272
 - 우선 카카오 로그인부터 구현하고, 로직을 익히고 다음 단계로 넘어가자.
+
+
+
 ---
 
 # 알고리즘
