--- a/_posts/2021-01-28-팀 편성 알고리즘.md
+++ b/_posts/2021-01-28-팀 편성 알고리즘.md
@@ -1,43 +1,48 @@
 ---
 layout: post
 date: 2021-01-24 23:40:00
-title: "카카오 커머스 코딩테스트 외"
+title: "팀 편성 알고리즘 part.1"
 author: 김동훈
 categories: [TIL]
 tags: [github]
-image: https://doncolmi.github.io/assets/img/wdidi/2020-03-01-2%EC%9B%94-%ED%9A%8C%EA%B3%A0/16.png
+image: https://miro.medium.com/max/960/0*EiWOVeq1_AiwHe-p.jpg
 rating: 5
 ---
 
-## 카카오 커머스 코딩테스트
+## 팀 편성 알고리즘
 
-- 카카오 커머스 코딩테스트를 봤다. 총 세문제였고, 2시간이 주어졌다.
-- 그냥 물리적으로만 봐도 한 문제에 40분 이내로 컷을 잡아야 했다.
-- 몇달전에 봤던 카카오문제가 너무 어려워서 시도도 할 수 없었던 모습이 떠올랐고, 그 문제들을 2시간안에? 풀어야 한다는 압박감이 조금 있었다.
-- 1번문제는 비교적 쉬웠기 때문에 목표했던 시간 안에 풀 수 있었지만..
-- 2번문제는 로직까지만 어찌어찌 비벼 볼 수 있었고, 결국에는 풀 수 없었다.
-- 3번문제는 정말 한 번 문제 읽어보고 생각도 할 수 없었다.
-- 그냥 의미를 두기에는 지저분하긴 했지만 어쨌든 한문제는 풀었다는 것과
-- 두번째 문제를 그래도 도전은 할 수 있었던 점..?
-- 그래도 아직까지는 부족한점이 훨씬 많다. 로직도 맞는 로직이 아닐 것 같고..
-- 알고리즘 끊지 말고 계속하자
+- 회사 업무로 프로젝트 팀을 편성을 하고 있다.
+- 아무래도 수강생들의 프로젝트다 보니 최대한 편하게 할 수 있게 팀을 편성하는데, 이 일이 굉장히 오래 걸렸다. 업무를 인수인계 받을 때, 3명이 붙었지만 몇시간이 걸렸다..
+- 물론 설명해주고 이해하고 하다보니 시간이 소요되는 것은 당연하지만.. 한창 프로그래머스 1단계로 자신감 뿜뿜하던 나에게는 당연히 알고리즘으로 해결 해야 할 문제였다.
+- 그릇된 생각이었다.
+- 대략 50여명의 수강생이 있고, 1명당 선호하는 동료와 어려운 동료가 있다.
+- 이 부분에서부터 꼬였다. 설문을 받아 스프레드 시트에 쌓는데, 기입하는 양식이 다 제각각이다보니 일정한 형태로 받아오는 것이 어려웠다.
+- 별 코드를 다 찍어보다가 그냥 설문지를 수정했다.
 
-#### 01.24 추가 - 크롬 탭
+  > 기존 : 'A,B,C,D,E님,F(~~~해서 안돼요, 싫어요, 좋아요 등)'
+  > 변경 : 동료1,2,3 등으로 응답 세션을 나눴다.
 
-- 밤늦게까지 계속 크롬탭을 고민했지만 답이 나오지 않았다.
-- 경로 설정이 문제인가 싶어.. 깃헙을 5개~10개 정도 참고했지만, 왜 이런 경로가 되는지 더 어려울뿐이었다.
-- 우선 그동안 검색했던 키워드들을 찾아봤고, "how to use get chrome link", "how to use chrome API" 와 같은 키워드들이었다.
-- 물론 더 많은 키워드들을 찾아봤지만 전체적인 맥락은 저정도였다. 저 키워드들을 보면서 생각한 것은 나는 이미 크롬 탭의 링크들을 가져오는 것은 성공했지만 이 링크들을 리액트 앱에 옮기는 것이 문제였다.
-- 너무 많은 삽질끝의 얻은 약간의 결과였지만.. 점점 뇌절하고 있던 나에게는 큰 도움이 됐다.
-- 방향성을 크롬 탭 링크를 가져오는 것이 아니라 이미 백그라운드에서 가져온 크롬 탭 링크를 리액트 앱으로 옮기는 것으로 틀었다.
-- 여러가지 방법이 있었고, 내가 해볼만한것은 로컬스토리지를 이용해 가져오는 것이었다.
-- 백그라운드에서 로컬스토리지로 내가 가져온 크롬탭링크(string)을 보냈고, 리액트 앱에서 가져오는 것에 성공했다.
-- 결과적으로는 여러가지 문제가 있어서 결국 폐기처분되었지만, 그래도 삽질의 방향성을 잡았다는 것에서..? 약간의 의미를 두고 싶다.
+- 이렇게 한 섹션에서 한명의 수강생씩만 받아와서 하나로 합치는게 훨씬 쉬웠다. 그 와중에 갓프레드시트.. 명령어 한 번으로 안에 모든 스트링들 싹 긁어와서 객체로 만들었다.
 
----
+```js
+let data = {'수강생 이름' : 'Favorite' : ['A','B','C'],'Difficult':['1','2','3']}
+```
 
-#### 참조 블로그
+과 같은 형식으로 모든 수강생들의 선호도 조사 객체를 만들었다.
 
-https://levelup.gitconnected.com/how-to-use-background-script-to-fetch-data-in-chrome-extension-ef9d7f69625d
+- 현재는 선호도조사 설문조사를 바탕으로 객체를 만들고, 기존의 팀을 유지하는 경우, 짝대기가 서로 맞는 경우(A > B, B > A), 설문제출을 하지 않은 경우, 선호도 조사에 아무도 기입하지 않았을 경우 등의 엣지케이스를 처리했다.
+- 경우의 수가 너무 많아 ..길이 험난하다.
+- 생각해 본 수도코드는
 
----
+  1. data 객체에서 기존의 팀을 유지하는 경우의 수강생을 team 배열에 담는다.
+  2. 짝대기가 서로 맞는 경우를 pair 배열에 담는다.
+  3. 짝대기가 두명이 맞는 경우(A,B,C 가 있을 때, A와 B가 서로 선호하고, A와 C도 서로 선호하는 경우) - B나 C중에 하나라도 싫어한다면 배정 x , 싫어하는 사람에 B와 C가 없을 경우 배정 O
+  4. A가 B를 선호하고 B가 A를 싫어하지 않을 경우
+  5. 4번까지를 Team, Pair 배열에 나누어 담고 아무도 기입을 안한경우를 Joker 배열에, 설문자체를 제출하지 않은 경우를 Unsub 배열에 나누어 담는다.
+  6. pair 배열에 joker 배열에 수강생들을 한 명씩 순회하고, pair[i] 전체가 joker의 요소를 싫어하지 않는 경우 joker를 pair에 배정한다.
+  7. unsub 배열도 joker와 마찬가지로 순회한다.
+  8. pair의 요소의 .length가 4일 경우 team으로 보낸다
+  9. return team
+
+- 수도코드도 겁내 어렵다. 또 여기에서.. 존재하지 않는 수강생을 선호하는 경우가 있다.(기수이동이라든지.. 선호는 하지만 이사람이 하차한줄도 모른다든지..)
+- 우선 현재 2번까지는 진행이 됐고, 차근차근 해봐야겠다.
