--- a/_posts/2021-02-22-스크립트 폼.md
+++ b/_posts/2021-02-22-스크립트 폼.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2021-02-09 23:40:00
-title: "Time Complexity"
+title: "Data-automation"
 author: 김동훈
 categories: [TIL]
 tags: [github]
